--- a/UserAuth/src/main/resources/application.properties
+++ b/UserAuth/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=Realcovrig98
 
 task.service.url = http://192.168.168.134:8080
+diary.service.url = http://192.168.168.134:9090/diary
 server.port=9090
